--- a/GenCANStruct/templates/define_can_template.jinja
+++ b/GenCANStruct/templates/define_can_template.jinja
@@ -5,6 +5,8 @@
 #include <stdint.h>
 #include <memory>
 #include <iostream>
+#include <chrono>
+#include <limits> 
 
 #include "../CanDB.h"
 #include "Common.h"
@@ -64,6 +66,7 @@ public:
         this->status        = CAN_STATUS::eCS_Unknown;
         this->timeoutMs     = 200 * 5;      
         this->updated       = false;
+        this->lastActivated = std::chrono::steady_clock::time_point::min();
     }
 
     ~{{ message.name }}_MSG(){
