--- a/GenCANStruct/templates/define_can_template.jinja
+++ b/GenCANStruct/templates/define_can_template.jinja
@@ -15,12 +15,7 @@
 #define {{ message.name }}_ID 0x{{ message.frame_id }}
 {% endfor %}
 
-uint32_t u32CAN_ID_Receive_Filter[] = {
-{% for message in messages %}
-    {{ message.name }}_ID,
-{% endfor %}
-};
-
+#define ARR_MSG_FILTER { {% for message in messages %} {{ message.name }}_ID {% if not loop.last %},{% endif %} {% endfor %} }
 
 {% for message in messages %}
 struct {{ message.name }}_SIGNALS
@@ -62,11 +57,10 @@ public:
     {
         this->id            = {{ message.frame_id }};
         this->dlc           = {{ message.length }};
-        this->periodTimeMs  = 200;  
+        this->periodTimeMs  = 100;  
         this->status        = CAN_STATUS::eCS_Unknown;
-        this->timeoutMs     = 200 * 5;      
-        this->updated       = false;
-        this->lastActivated = std::chrono::steady_clock::time_point::min();
+        this->timeoutMs     = this->periodTimeMs * 5;      
+        this->lastActivated = std::chrono::steady_clock::now();
     }
 
     ~{{ message.name }}_MSG(){
@@ -82,14 +76,10 @@ public:
 
     CanFrame pack() override
     {
-        // Create a buffer to hold the combined data
         uint8_t combinedData[CANFD_MAX_DLEN] = {0};  // Assuming MAX_DATA_SIZE is a static constant in CanFrame
 
-        // Copy all properties to the combined buffer
         uint8_t* buffer = combinedData;
         copyPropertiesToBuffer(buffer, {% for signal in message.signals %} signals.{{ signal.name }} {% if not loop.last  %}, {% endif %} {% endfor %} );
-
-        // Create a CanFrame instance with the combined data
         CanFrame combinedFrame(this->id, combinedData, CANFD_MAX_DLEN);
 
         return combinedFrame;
@@ -103,17 +93,34 @@ public:
 
 {% endfor %}
 
-void initRx()
+class CFGCAN
 {
-{% for message in messages %}
-    std::shared_ptr<{{ message.name }}_MSG> {{ message.name }}_OBJ = std::make_shared<{{ message.name }}_MSG>();
-    CanDB::getInstance().setCanMsgRx({{ message.name }}_OBJ->getCanId(), {{ message.name }}_OBJ);
-{% endfor %}
-}
+private:
+    CFGCAN() {}  
 
-void initTx()
-{
+public:
+    static CFGCAN& getInstance()
+    {
+        static CFGCAN instance;  
+        return instance;
+    }
 
-}
+    void initRx()
+    {
+        {% for message in messages %}
+            std::shared_ptr<{{ message.name }}_MSG> {{ message.name }}_OBJ = std::make_shared<{{ message.name }}_MSG>();
+            CanDB::getInstance().setRxCanMessage({{ message.name }}_OBJ->getCanId(), {{ message.name }}_OBJ);
+        {% endfor %}
+    }
+
+    void initTx()
+    {
+        // Your existing code for initTx
+    }
+
+    CFGCAN(const CFGCAN&) = delete;  // Delete copy constructor
+    void operator=(const CFGCAN&) = delete;  // Delete assignment operator
+    ~CFGCAN() {}
+};
 
 #endif
